[FIX] alignment issue in dropdown menu (addon web_graph)
bzr revid: ged@openerp.com-20131120132042-az2kb3cewkq51hrx

--- a/addons/web_graph/static/src/css/graph.css
+++ b/addons/web_graph/static/src/css/graph.css
@@ -30,3 +30,7 @@ span.web_graph_indent {
 tr.graph_top td {
 	text-align: center;
 }
+
+tr.graph_top li {
+	text-align: left;
+}
